--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <title>Mount St. Helen!</title>
@@ -7,14 +6,38 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 <style>
+  
+  .body [
+  font: Karma;
+  ]
+  
+  </style>
+<body>
+<!-- Navbar -->
+<div class="w3-top">
+  <div class="w3-bar w3-dark-grey w3-card w3-left-align w3-large">
+    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-grey" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
+	<a class="w3-button w3-hover-white">Mt. St. Helens</a>
 
+  </div>
+  <div class="w3-blue w3-padding-32">
+  <div class="w3-center">
+  <img class="w3-center" src="https://cdn.britannica.com/50/4950-050-3E420140/face-Mt-St-Helens-summit-elevation-June-1970.jpg" style="width: auto; height: 300px">
+  					</div>
 
-
-
-
-
-
-
-
-
-</style>
+    
+  </div>
+  
+  <div class="w3-grey w3-padding-32">
+    	 <h1 class="w3-center"style="font-size: 50px">Mount St. Helens</h1>
+  <div class="w3-center w3-grey w3-padding-64">
+  
+  <img  class="w3-right w3-margin-right" src="https://www.eurekalert.org/multimedia/pub/web/170971_web.jpg" style="width: auto; height: 150px">
+    <p style="font-size: 24px">Mount St. Helens is a volcano located in Skamania County, Washington. It is most famous for its eruption in 1980. </p>
+    </div>
+  
+  </div>
+  
+  </body>
+  
+  </html>
