--- a/index.html
+++ b/index.html
@@ -2,14 +2,22 @@
 <html>
 <title>Mount St. Helen!</title>
 <meta charset="UTF-8">
+
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+
 <style>
   
   .body [
   font: Karma;
   ]
+  
+  html [
+  height: auto;
+  margin: auto;
+  width: auto;
+]
   
   </style>
 <body>
@@ -36,6 +44,10 @@
     <p style="font-size: 24px">Mount St. Helens is a volcano located in Skamania County, Washington. It is most famous for its eruption in 1980. </p>
     </div>
   
+  </div>
+  
+  <div class="w3-dark-grey w3-padding-32">
+   <h2>test</h2>
   </div>
   
   </body>
