--- a/index.html
+++ b/index.html
@@ -2,54 +2,47 @@
 <html>
 <title>Mount St. Helen!</title>
 <meta charset="UTF-8">
-
-<meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+<link href="https://fonts.googleapis.com/css?family=Lora|Merriweather|Playfair+Display|Trade+Winds|Ubuntu&display=swap" rel="stylesheet">
+
 
 <style>
   
-  .body [
-  font: Karma;
-  ]
-  
-  html [
-  height: auto;
-  margin: auto;
-  width: auto;
-]
+html,body,h1,h2 {
+    overflow: visible;
+}
   
   </style>
 <body>
 <!-- Navbar -->
 <div class="w3-top">
-  <div class="w3-bar w3-dark-grey w3-card w3-left-align w3-large">
-    <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-grey" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-	<a class="w3-button w3-hover-white">Mt. St. Helens</a>
-
+  <div class="w3-bar w3-dark-grey w3-card w3-center w3-large">
+	<a class="w3-button w3-hover-white" style="font-family: Merriweather; font-size: 35px;">Mt. St. Helens</a>
+    </div>
   </div>
   <div class="w3-blue w3-padding-32">
   <div class="w3-center">
-  <img class="w3-center" src="https://cdn.britannica.com/50/4950-050-3E420140/face-Mt-St-Helens-summit-elevation-June-1970.jpg" style="width: auto; height: 300px">
+  <img class="w3-center" src="https://cdn.britannica.com/50/4950-050-3E420140/face-Mt-St-Helens-summit-elevation-June-1970.jpg" style="width: auto; height: 300px; border-radius: 12px; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);">
   					</div>
 
     
   </div>
   
   <div class="w3-grey w3-padding-32">
-    	 <h1 class="w3-center"style="font-size: 50px">Mount St. Helens</h1>
+    	 <h1 class="w3-center"style="font-family: 'Playfair Display'; font-size: 50px">Mount St. Helens</h1>
   <div class="w3-center w3-grey w3-padding-64">
   
-  <img  class="w3-right w3-margin-right" src="https://www.eurekalert.org/multimedia/pub/web/170971_web.jpg" style="width: auto; height: 150px">
-    <p style="font-size: 24px">Mount St. Helens is a volcano located in Skamania County, Washington. It is most famous for its eruption in 1980. </p>
+  <img  class="w3-right w3-margin-right" src="https://www.eurekalert.org/multimedia/pub/web/170971_web.jpg" style="width: auto; height: 150px; border-radius: 12px; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);">
+    <p style="font-family: 'Ubuntu'; font-size: 24px">Mount St. Helens is a volcano located in Skamania County, Washington. It is most famous for its eruption in 1980. </p>
     </div>
   
   </div>
   
   <div class="w3-dark-grey w3-padding-32">
-   <h2>test</h2>
+   <h2 class="w3-center">The Eruption!</h2>
+      <p class="w3-center">As mentioned above, Mount St. Helens erupted on May 17th, 1980! The eruption destroyed over 200 homes, more than 185 miles of roads as well as 15 miles of railways. The full estimated damage done is worth $1.1 billion.</p>
   </div>
   
-  </body>
-  
-  </html>
+    </body>
+</html>
