--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<title>Mount St. Helen!</title>
+<title>Mount St. Helens!</title>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather|Playfair+Display|Trade+Winds|Ubuntu&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="dw.css">
 
 
 <style>
@@ -13,6 +14,7 @@ html,body,h1,h2 {
     overflow: visible;
 }
   
+    
   </style>
 <body>
 <!-- Navbar -->
@@ -40,8 +42,10 @@ html,body,h1,h2 {
   </div>
   
   <div class="w3-dark-grey w3-padding-32">
-   <h2 class="w3-center">The Eruption!</h2>
-      <p class="w3-center">As mentioned above, Mount St. Helens erupted on May 17th, 1980! The eruption destroyed over 200 homes, more than 185 miles of roads as well as 15 miles of railways. The full estimated damage done is worth $1.1 billion.</p>
+   <h2 class="w3-center" style="font-family: Merriweather; font-size:50px;">The Eruption!</h2>
+      <img class= "djwpicture w3-margin-right w3-right" src="https://cdn.theatlantic.com/assets/media/img/photo/2015/05/the-eruption-of-mount-st-helens-35/s01_141-1/original.jpg" style="width: auto; height: 150px">
+      <p class="w3-center" style="font-family: 'Playfair Display'; font-size: 25px;">As mentioned above, Mount St. Helens erupted on May 17th, 1980! The eruption destroyed over 200 homes, more than 185 miles of roads as well as 15 miles of railways. The full estimated damage done is worth $1.1 billion.</p>
+
   </div>
   
     </body>
