--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather|Playfair+Display|Trade+Winds|Ubuntu&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="dw.css">
 
@@ -20,10 +21,10 @@ html,body,h1,h2 {
 <!-- Navbar -->
 <div class="w3-top">
   <div class="w3-bar w3-dark-grey w3-card w3-center w3-large">
-	<a class="w3-button w3-hover-white" style="font-family: Merriweather; font-size: 35px;">Mt. St. Helens</a>
+	<a class="w3-button w3-hover-white" style="font-family: Merriweather; font-size: 35px;">Mount St. Helens</a>
     </div>
   </div>
-  <div class="w3-blue w3-padding-32">
+  <div class="w3-padding-32" style="  background-image: linear-gradient(to bottom right, blue, purple);">
   <div class="w3-center">
   <img class="w3-center" src="https://cdn.britannica.com/50/4950-050-3E420140/face-Mt-St-Helens-summit-elevation-June-1970.jpg" style="width: auto; height: 300px; border-radius: 12px; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);">
   					</div>
@@ -31,9 +32,9 @@ html,body,h1,h2 {
     
   </div>
   
-  <div class="w3-grey w3-padding-32">
+  <div class="w3-padding-32" style="background-color:#95a5a6">
     	 <h1 class="w3-center"style="font-family: 'Playfair Display'; font-size: 50px">Mount St. Helens</h1>
-  <div class="w3-center w3-grey w3-padding-64">
+  <div class="w3-center w3-padding-64">
   
   <img  class="w3-right w3-margin-right" src="https://www.eurekalert.org/multimedia/pub/web/170971_web.jpg" style="width: auto; height: 150px; border-radius: 12px; box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);">
     <p style="font-family: 'Ubuntu'; font-size: 24px">Mount St. Helens is a volcano located in Skamania County, Washington. It is most famous for its eruption in 1980. </p>
@@ -41,9 +42,10 @@ html,body,h1,h2 {
   
   </div>
   
-  <div class="w3-dark-grey w3-padding-32">
+  <div class="w3-padding-32" style="background-color:#7f8c8d">
    <h2 class="w3-center" style="font-family: Merriweather; font-size:50px;">The Eruption!</h2>
-      <img class= "djwpicture w3-margin-right w3-right" src="https://cdn.theatlantic.com/assets/media/img/photo/2015/05/the-eruption-of-mount-st-helens-35/s01_141-1/original.jpg" style="width: auto; height: 150px">
+      <img class= "djwpicture w3-margin-left w3-left" src="https://cdn.theatlantic.com/assets/media/img/photo/2015/05/the-eruption-of-mount-st-helens-35/s01_141-1/original.jpg" style="width: auto; height: 150px; border-radius: 12px;
+box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);">
       <p class="w3-center" style="font-family: 'Playfair Display'; font-size: 25px;">As mentioned above, Mount St. Helens erupted on May 17th, 1980! The eruption destroyed over 200 homes, more than 185 miles of roads as well as 15 miles of railways. The full estimated damage done is worth $1.1 billion.</p>
 
   </div>
