--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </div>
 <div class="w3-bar w3-dark-blue">
     <div class="w3-hover-white">
-        <p class="w3-button w3-purple" href="daltonjwood.com/projects.html">School Projects</p>
+        <p class="w3-button w3-purple" href="https://daltonjwood.com/projects.html">School Projects</p>
     </div>
     
     </div>
