--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Karma">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather|Playfair+Display|Trade+Winds|Ubuntu&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="daltonjwood.com/dw.css">
+<link rel="stylesheet" href="dw.css">
 <style>
  
     </style>
