--- a/projects.html
+++ b/projects.html
@@ -29,6 +29,14 @@
     <a class="dwHText" href="https://daltonjwood.com/mtsthelens">Mt. St. Helens</a>
     <p class="dwText">• This is a website I made on Mt. St. Helens for a project in class.</p>
     </div>
-    
+    <div style="padding:10px; color: grey;">
+    <a href="https://daltonjwood.com/discord">
+    <img src=html-images/Discord-Logo+Wordmark-White.svg style="width: auto; height: 55px;" href="https://daltonjwood.com/discord" align="left">
+    </a>
+    <a href="https://twitter.com/DaltonJamesWood">
+    <img src="html-images/Twitter_Social_Icon_Rounded_Square_Color.png" style="height: 55px; width: auto;" align="right">
+    </a>
+    <p style="color: white; font-size: 15px;margin-right: 50%; margin-left: 50%;">v2.02</p>
+    </div>
 </body>
     
