--- a/mods.html
+++ b/mods.html
@@ -42,7 +42,7 @@
     <a href="https://twitter.com/DaltonJamesWood">
     <img src="html-images/Twitter_Social_Icon_Rounded_Square_Color.png" style="height: 55px; width: auto;" align="right">
     </a>
-    <p style="color: white; font-size: 15px;margin-right: 50%; margin-left: 50%;">v2.02</p>
+    <p style="color: white; font-size: 15px;margin-right: 50%; margin-left: 50%;">v2.03b</p>
     </div>
 </body>
     
