--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
     </div>
     
 <div style="padding: 75px;background-color: #262626" class="dwBoxify">
-    <a class="dwHText" href="https://daltonjwood.com/archivedprojects/mtsthelens">Mt. St. Helens</a>
+    <a class="dwHText" href="https://daltonjwood.com/mtsthelens">Mt. St. Helens</a>
     <p class="dwText">• This is a website I made on Mt. St. Helens for a project in class.</p>
     </div>
     <div style="padding:10px; color: grey;">
@@ -37,7 +37,7 @@
     <a href="https://twitter.com/DaltonJamesWood">
     <img src="html-images/Twitter_Social_Icon_Rounded_Square_Color.png" style="height: 55px; width: auto;" align="right">
     </a>
-    <p style="color: white; font-size: 15px;margin-right: 50%; margin-left: 50%;">v2.03b</p>
+    <p style="color: white; font-size: 15px;margin-right: 50%; margin-left: 50%;">v2.03c</p>
     </div>
 
 </body>
