--- a/mods.html
+++ b/mods.html
@@ -29,7 +29,7 @@
 
 <div class="dwTBox">
     <p class="dwHText">Fallout 4 Mods!</p>
-    <a href="https://daltonjwood.com/mods/chadsworth">
+    <a href="https://daltonjwood.com/chadsworth">
         <p class="dwMidText">• Chadsworth</p>
     </a>
     <p class="dwBText">Changes Codsworth to Chadsworth, its very nice.</p>
@@ -42,7 +42,7 @@
     <a href="https://twitter.com/DaltonJamesWood">
     <img src="html-images/Twitter_Social_Icon_Rounded_Square_Color.png" style="height: 55px; width: auto;" align="right">
     </a>
-    <p style="color: white; font-size: 15px;margin-right: 50%; margin-left: 50%;">v2.03b</p>
+    <p style="color: white; font-size: 15px;margin-right: 50%; margin-left: 50%;">v2.03c</p>
     </div>
 </body>
     
