--- a/mtsthelens.html
+++ b/mtsthelens.html
@@ -25,7 +25,7 @@ html,body,h1,h2 {
 <div class="w3-top">
   <div class="w3-bar w3-dark-grey w3-card w3-center w3-large">
 	<a class="w3-button w3-hover-white w3-center" style="font-family: Merriweather; font-size: 35px;">Mount St. Helens</a>
-	<a class="w3-button w3-left w3-hover-white" href="https://DaltonJWood.github.io/archivedprojects/mtsthelens-resources.html" style="font-family: Merriweather; font-size: 25px;">Resources</a>
+	<a class="w3-button w3-left w3-hover-white" href="https://DaltonJWood.github.io/mtsthelens-resources.html" style="font-family: Merriweather; font-size: 25px;">Resources</a>
     </div>
   </div>
   <div style=" padding: 125px; background-image: linear-gradient(to bottom right, blue, purple);">
