--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 <link href="https://fonts.googleapis.com/css?family=Lora|Merriweather|Playfair+Display|Trade+Winds|Ubuntu&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="dw.css">
 <head>
-<script data-ad-client="ca-pub-4987656588694556" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script></head>
+<script data-ad-client="ca-pub-4972639722819450" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
 <style>
  
     </style>
