--- a/discord.html
+++ b/discord.html
@@ -2,7 +2,7 @@
 <html>
     <head>
 <title>Loading Discord!</title>
-    <meta http-equiv = "refresh" content = "1; url = https://discord.gg/WcFp6r2" />
+    <meta http-equiv = "refresh" content = "1; url = https://discord.gg/6QXPZJBNpe" />
     </head>
 <style>
 
